# lua_zephyr

./: .gitignore  .gitmodules  .luarc.json  CLAUDE.md  CMakeLists.txt  Kconfig.lua_module  Kconfig.luaz  README.md  VERSION  conversation_log.md  gdbinit  hardware_map.yaml  justfile  lua.cmake  lua_kconfig.cmake  luaz.cmake
app/: CMakeLists.txt
app/src/: hello_world.lua  main.c  sample01.lua  zephyr.lua
include/: luaz_fs.h  luaz_msg_descr_pb.h  luaz_utils.h  luaz_zbus.h
include/lua_zephyr/: lua_msg_descr.h  luaz_msg_descr.h  luaz_msg_descr_pb.h  utils.h
lua_module/: Kconfig.lua_module  lua_template.h.in  lua_thread.c.in
lua_module/include/: lobject.h  luaconf.h
lua_module/include/lua_zephyr/: utils.h
lua_module/scripts/: lua_cat.py  lua_to_h.py
lua_module/src/: lapi.c  lcode.c
lua_module/src/lua_zephyr/: utils.c
lua_module/zephyr/: module.yml
lua_zephyr/: CMakeLists.txt  Kconfig.lua_module  VERSION  lua.cmake  lua_bytecode_template.h.in  lua_bytecode_thread.c.in  lua_fs_thread.c.in  lua_template.h.in  lua_thread.c.in
lua_zephyr/include/lua_zephyr/: codec.h  lua_fs.h  lua_msg_descr.h  lua_msg_descr_pb.h  utils.h  zbus.h
lua_zephyr/scripts/: lua_cat.py  lua_compile.py  nanopb_custom_naming.py
lua_zephyr/src/: lapi.c  lcode.c  ldebug.c  ldo.c  lopcodes.c  lparser.c  lvm.c
lua_zephyr/src/lua_zephyr/: codec.c  lua_fs_shell.c  lua_msg_descr.c  lua_parser_stubs.c  lua_repl.c  lua_zbus.c  utils.c
producer_consumer/: CMakeLists.txt  prj.conf
producer_consumer/src/: main.c  producer.lua  zbus_lua_wrappers.c
samples/heavy/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
samples/heavy/src/: fake.lua  heavy.lua  main.c
samples/hello_world/: CMakeLists.txt  prj.conf  sample.yaml
samples/hello_world/src/: hello_world.lua  main.c  sample01.lua  zephyr.lua
samples/hello_world_bytecode/: CMakeLists.txt  prj.conf  sample.yaml
samples/hello_world_bytecode/src/: hello_world.lua  main.c  sample01.lua
samples/littlefs/: CMakeLists.txt  prj.conf  sample.yaml
samples/littlefs/src/: greet.lua  hello_fs.lua  hello_fs_setup.c  info.lua  main.c
samples/producer_consumer/: CMakeLists.txt  prj.conf  sample.yaml
samples/producer_consumer/include/: channels.h
samples/producer_consumer/proto/: channels.options  channels.proto
samples/producer_consumer/scripts/: nanopb_custom_naming.py
samples/producer_consumer/src/: channels.c  consumer.c  main.c  producer.lua  producer_lua.c  zbus_lua_wrappers.c  zlua_apis.lua
samples/producer_consumer/src/messages/: msg_acc_data.c
scripts/: lua_cat.py  lua_to_h.py  luaz_gen.py
src/: luaz_apis.lua  luaz_fs.c  luaz_fs_shell.c  luaz_msg_descr.c  luaz_parser_stubs.c  luaz_repl.c  luaz_utils.c  luaz_zbus.c
src/lua_zephyr/: lua_fs.c  lua_fs_shell.c  lua_msg_descr.c  lua_parser_stubs.c  lua_repl.c  lua_zbus.c  luaz_fs.c  luaz_fs_shell.c  luaz_msg_descr.c  luaz_repl.c  luaz_utils.c  luaz_zbus.c
templates/: lua_bytecode_template.h.in  lua_bytecode_thread.c.in  lua_fs_thread.c.in  lua_template.h.in  lua_thread.c.in
zephyr/: module.yml
